--- a/src/pages/RegisterUser/components/Form/components/FormField/style.css
+++ b/src/pages/RegisterUser/components/Form/components/FormField/style.css
@@ -2,6 +2,18 @@
   display: flex;
   align-items: center;
   gap: 5px;
+  position: relative;
+}
+
+.register__client__form__field span {
+  position: absolute;
+  font-size: 1.1rem;
+  font-weight: 400;
+  transform: translate(48px, -1px);
+  pointer-events: none;
+  transition: all ease 0.2s;
+  background-color: #cfcfcf;
+  color: #444444;
 }
 
 .register__client__form__field__icon {
@@ -11,8 +23,6 @@
   height: 40px;
   width: 40px;
   color: black;
-  background-color: #b3b2b2;
-  border: 1px solid #919191;
 }
 
 .register__client__form__field input {
@@ -21,10 +31,14 @@
   font-size: 1.1rem;
   border-radius: 2px;
   padding: 4px 8px;
-  background-color: #b3b2b2;
-  border: 1px solid #919191;
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid #919191;
+  outline: none;
 }
 
-.register__client__form__field input:focus {
-  outline: 1px solid #5c5c5c;
+input:focus ~ span,
+input:valid ~ span {
+  font-size: 1rem;
+  transform: translate(48px, -30px);
 }
