--- a/src/pages/RegisterUser/components/Form/style.css
+++ b/src/pages/RegisterUser/components/Form/style.css
@@ -13,14 +13,20 @@
 .register__client__form__container {
   display: flex;
   flex-direction: column;
-  gap: 20px 0px;
+  gap: 40px 0px;
   width: 100%;
 }
 
 .register__client__form__button {
   width: 70%;
-  padding: 5px 0px;
+  padding: 10px 0px;
   border-radius: 4px;
   border: 1px solid gray;
   margin: 0 auto;
+  transition: all ease 0.1s;
+}
+
+.register__client__form__button:hover {
+  cursor: pointer;
+  filter: brightness(0.94);
 }
